# omniknight

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
config/: default.toml
src/: lib.rs  main.rs
src/agent/: manager.rs  mod.rs  output.rs  process.rs  state.rs
src/app/: action.rs  event.rs  event_loop.rs  mod.rs  state.rs
src/config/: loader.rs  schema.rs
src/ipc/: agent_bridge.rs  bus.rs  mod.rs
src/keybinds/: handler.rs  mod.rs  mode.rs  vim.rs
src/mission/: manager.rs  mod.rs  model.rs  persistence.rs
src/terminal/: manager.rs  mod.rs  scrollback.rs  session.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/views/: command_palette.rs  home.rs  mission_control.rs  mod.rs  terminal_view.rs  workspace_view.rs
src/ui/widgets/: agent_list.rs  fuzzy_input.rs  input_dialog.rs  log_stream.rs  mission_bar.rs  mod.rs
src/workspace/: manager.rs  model.rs  persistence.rs
tests/: dsl.rs  e2e.rs  harness.rs  snapshots.rs
tests/snapshots/: snapshots__empty.snap  snapshots__with_workspace.snap
