[package]
name = "omniknight"
version = "0.1.0"
edition = "2024"
description = "A keyboard-first TUI cockpit for orchestrating AI agents"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nucleo = "0.5"
anyhow = "1"
dirs = "6"
signal-hook = "0.3"
